--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <h5 class="card-title"><strong>Portfolio Project</strong></h5>
                     <p class="card-text">This portfolio displays a collection of my web development and design projects. It highlights my skills in building responsive websites and applications using technologies like HTML, CSS, and JavaScript. Explore my work to see how I solve real-world problems and deliver quality results.</p>
                    
-                    <a href="https://github.com/yourusername/project1" target="_blank" class="btn btn-primary">View Project</a>
+                    <a href="https://github.com/sathiya2002/Portfolio-project" target="_blank" class="btn btn-primary">View Project</a>
                 </div>
             </div>
         </div>
@@ -145,7 +145,7 @@
                     <h5 class="card-title"><strong>Quiz App</strong></h5>
                     <p class="card-text">The purpose of this project is to develop a web-based quiz app that facilitates online examinations. It aims to reduce the time required for taking exams and receiving results. This platform will provide an efficient solution for both students and teachers, allowing exams to be conducted and assessed online.</p>
                     
-                    <a href="https://github.com/yourusername/project3" target="_blank" class="btn btn-primary">View Project</a>
+                    <a href="https://github.com/sathiya2002/quizapp" target="_blank" class="btn btn-primary">View Project</a>
                 </div>
             </div>
         </div>
